infra(app): connect everything from HTTP server to mongo with sample test
