# dasbod-back/dasbod-infra-http-ktor/src/main/resources/openapi/documentation.yaml
@@ -6,77 +6,190 @@ info:
 servers:
 - url: "https://dasbod"
 paths:
-  /:
+  /budgetPlans:
     get:
-      description: ""
+      description: "authenticate(\"auth0\") {"
       responses:
         "200":
-          description: "OK"
+          description: "OK <br> get all"
           content:
             text/plain:
               schema:
                 type: "string"
               examples:
                 Example#1:
-                  value: "Hello World!"
-  /api/messages/admin:
-    get:
+                  value: "list"
+    post:
       description: ""
+      requestBody:
+        content:
+          '*/*':
+            schema:
+              $ref: "#/components/schemas/BudgetPlan"
+        required: true
       responses:
-        "200":
-          description: "OK"
+        "201":
+          description: "Created"
           content:
-            application/json:
+            '*/*':
               schema:
-                type: "string"
-              examples:
-                Example#1:
-                  value: "{\"message\": \"The API successfully recognized you as an\
-                    \ admin.\"}"
-  /api/messages/protected:
-    get:
-      description: ""
-      responses:
-        "200":
-          description: "OK"
-          content:
-            application/json:
-              schema:
-                type: "string"
-              examples:
-                Example#1:
-                  value: "{\"message\": \"The API successfully validated your access\
-                    \ token.\"}"
-  /api/messages/public:
-    get:
-      description: ""
-      responses:
-        "200":
-          description: "OK"
-          content:
-            application/json:
-              schema:
-                type: "string"
-              examples:
-                Example#1:
-                  value: "{\"message\": \"The API doesn't require an access token\
-                    \ to share this message.\"}"
-  /articles:
-    get:
+                $ref: "#/components/schemas/Entity_BudgetPlan"
+  /budgetPlans/{id}:
+    delete:
       description: ""
       parameters:
-      - name: "sort"
-        in: "query"
-        required: false
+      - name: "id"
+        in: "path"
+        required: true
         schema:
           type: "string"
       responses:
         "200":
-          description: "OK <br> Get all articles ..."
+          description: "OK"
           content:
             '*/*':
               schema:
-                type: "string"
-              examples:
-                Example#1:
-                  value: ""
+                $ref: "#/components/schemas/Entity_BudgetPlan"
+    get:
+      description: ""
+      parameters:
+      - name: "id"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Function1_? super Entity<BudgetPlan>"
+        "404":
+          description: "Not Found"
+          content:
+            '*/*':
+              schema:
+                type: "object"
+    put:
+      description: ""
+      parameters:
+      - name: "id"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      requestBody:
+        content:
+          '*/*':
+            schema:
+              $ref: "#/components/schemas/BudgetPlan"
+        required: true
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Entity_BudgetPlan"
+components:
+  schemas:
+    BigDecimal:
+      type: "object"
+      properties: {}
+    LocalDate:
+      type: "object"
+      properties: {}
+    BudgetCategory:
+      type: "object"
+      properties:
+        name:
+          type: "string"
+        amount:
+          $ref: "#/components/schemas/BigDecimal"
+      required:
+      - "name"
+      - "amount"
+    BudgetPlan:
+      type: "object"
+      properties:
+        moneyAtStart:
+          $ref: "#/components/schemas/BigDecimal"
+        expectedIncome:
+          $ref: "#/components/schemas/BigDecimal"
+        startDate:
+          $ref: "#/components/schemas/LocalDate"
+        endDate:
+          $ref: "#/components/schemas/LocalDate"
+        categories:
+          type: "array"
+          items:
+            $ref: "#/components/schemas/BudgetCategory"
+      required:
+      - "moneyAtStart"
+      - "expectedIncome"
+      - "startDate"
+      - "endDate"
+      - "categories"
+    Instant:
+      type: "object"
+      properties: {}
+    ModificationLog:
+      type: "object"
+      properties:
+        timestamp:
+          $ref: "#/components/schemas/Instant"
+        source:
+          type: "string"
+        user:
+          type: "string"
+      required:
+      - "timestamp"
+      - "source"
+      - "user"
+    ModificationsLog:
+      type: "object"
+      properties:
+        created:
+          $ref: "#/components/schemas/ModificationLog"
+        updated:
+          $ref: "#/components/schemas/ModificationLog"
+        deleted:
+          $ref: "#/components/schemas/ModificationLog"
+      required:
+      - "created"
+    EntityMetadata:
+      type: "object"
+      properties:
+        modificationsLog:
+          $ref: "#/components/schemas/ModificationsLog"
+        owner:
+          type: "string"
+      required:
+      - "modificationsLog"
+      - "owner"
+    Entity:
+      type: "object"
+      properties:
+        id:
+          type: "string"
+        metadata:
+          $ref: "#/components/schemas/EntityMetadata"
+      required:
+      - "id"
+      - "metadata"
+      - "data"
+    Entity_BudgetPlan:
+      type: "object"
+      properties:
+        id:
+          type: "string"
+        metadata:
+          $ref: "#/components/schemas/EntityMetadata"
+        data:
+          $ref: "#/components/schemas/BudgetPlan"
+    Function1:
+      type: "object"
+      properties: {}
+    Function1_? super Entity<BudgetPlan>:
+      type: "object"
